hw5_ws/log/build_2024-03-08_23-23-40/turtle_mover/stderr.log
  File "/home/vboxuser/hw5_ws/install/turtle_mover/lib/python3.10/site-packages/turtle_mover/turtle_mover.py", line 62
    if self.lastmsg != msg 
                           ^
SyntaxError: expected ':'

